# MEF-UFCA

./: .tags  .tags1  CMakeLists.txt  Makefile  algebra.h  apoio.h  estruturas.h  geometrias.h  graus.h  includes.h  main.cpp  materiais.h  matrizes.h  no.h  ponto.h  quadratura.h  teste  testes.cpp
Sources/: algebra.cpp  componentes.cpp  estruturas.cpp  geometrias.cpp  materiais.cpp  matrizes.cpp  quadratura.cpp
algebra/: algebra.h
analise/: analise.h
apoio/: apoio.h
container/: lista_ponteiro.h  vetor_ponteiro.h
estrutura/: crs.h  estruturas.h  generica.h  simetrica.h  vetor.h
geometria/: iso4.h
integracao/: quadratura.h
malha/: face.h  malha.h
material/: elastico_lin.h
matriz/: matrizes.h
nos/: graus.h  no.h
ponto/: dois_d.h  tres_d.h
